clusters/talos-cluster/samba/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba-deployment
  labels:
    app: samba-deployment
  namespace: samba
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: samba-deployment
  template:
    metadata:
      name: samba-deployment
      labels:
        app: samba-deployment
    spec:
      containers:
        - name: samba
          image: crazymax/samba:4.23.8@sha256:b37f7af97c773eddb593537f64da6389e5ee6695bcecf44f3ba1a8a6bcf34125
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          # Assuming privileged mode needed for Samba
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          ports:
            - containerPort: 445
              name: smb
            - containerPort: 3702
              protocol: TCP
              name: wsdd-tcp
            - containerPort: 3702
              protocol: UDP
              name: wsdd-udp
            - containerPort: 5355
              protocol: TCP
              name: llmnr-tcp
            - containerPort: 5355
              protocol: UDP
              name: llmnr-udp
          volumeMounts:
            - mountPath: /data
              name: samba-data-volume
            - mountPath: /samba/media
              name: samba-media-dir
              subPath: royossai
            - mountPath: /data/config.yml
              name: samba-config-volume
              subPath: config.yml
      volumes:
        - name: samba-config-volume
          secret:
            secretName: samba-secret
        - name: samba-data-volume
          persistentVolumeClaim:
            claimName: samba-data
        - name: samba-media-dir
          persistentVolumeClaim:
            claimName: samba-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdav-deployment
  labels:
    app: webdav-deployment
  namespace: samba
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: webdav-deployment
  template:
    metadata:
      name: webdav-deployment
      labels:
        app: webdav-deployment
    spec:
      containers:
        - name: webdav
          image: bytemark/webdav:latest@sha256:21eed0df1238d17766080425f9ef46da2c1130e3e3aa9eaf36794d2a72e7c616
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - mountPath: /var/lib/dav/data
              name: webdav-media-dir
              subPath: royossai
      volumes:
        - name: webdav-media-dir
          persistentVolumeClaim:
            claimName: webdav-media
