clusters/talos-cluster/samba/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-service
  namespace: samba
  annotations:
    external-dns.alpha.kubernetes.io/hostname: files.horus
    io.cilium/lb-ipam-ips: "172.198.1.16"
spec:
  type: LoadBalancer
  selector:
    app: samba-deployment
  ports:
    - protocol: TCP
      port: 445
      targetPort: 445
      name: smb
    - protocol: TCP
      port: 3702
      targetPort: 3702
      name: wsdd-tcp
    - protocol: UDP
      port: 3702
      targetPort: 3702
      name: wsdd-udp
    - protocol: TCP
      port: 5355
      targetPort: 5355
      name: llmnr-tcp
    - protocol: UDP
      port: 5355
      targetPort: 5355
      name: llmnr-udp
---
apiVersion: v1
kind: Service
metadata:
  name: webdav-service
  namespace: samba
spec:
  selector:
    app: webdav-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
